--- a/PagesMenu/style_menu.css
+++ b/PagesMenu/style_menu.css
@@ -23,20 +23,144 @@ span{
 
 }
 
-.sous_menu{
+footer a{
 
-	background-color: white;
-	border-radius: 15px;
-	padding: 10px 15px 10px 10px;
-	align-items: center;
-	height: 30px;
-	margin-bottom: 15px;
-	margin-right: 20px;
-	box-shadow: 1px 1px 8px #CECFCF;
+	cursor: pointer;
+	text-decoration: none;
+	color: white;
 
 }
 
 
+@keyframes apparition_progressive{
+
+	from{
+
+		top: 15px;
+		opacity: 0;
+
+	}
+
+	to{
+
+		top: 0px;
+		opacity: 1;
+
+	}
+
+
+}
+
+@media screen and (max-width: 560px){
+
+.sous_menu{
+
+	position: relative;
+	padding: 0px 10px 0px 10px;
+	width: 90%;
+	height: 50px;
+	margin-bottom: 10px;
+	background-color: white;
+	border-radius: 15px;
+	display: flex;
+	align-items: center;
+
+}
+
+.texte{
+
+	position: relative;
+	width: 100%;
+	
+}
+
+.sous_menu:hover{
+
+	cursor: pointer;
+}
+
+.sous_menu:hover .validation{
+
+	width: 20%;
+
+}
+
+.sous_menu:hover .cercle{
+
+	background-color: white;
+	opacity: 1;
+
+}
+
+.sous_menu:hover .cercle i{
+
+	transform: rotate(360deg);
+
+}
+
+.validation{
+
+	position: relative;
+	left: 10px;
+	width: 0px;
+	height: 100%;
+	background-color: #99E2D0;
+	border-top-right-radius: 15px;
+	border-bottom-right-radius: 15px;
+	transition: .5s;
+
+}
+.cercle{
+
+	position: relative;
+	width: 22px;
+	height: 22px;
+	background-color: white;
+	border-radius: 40px;
+	margin: auto;
+	margin-top: 14px;
+	line-height: 22px;
+	text-align: center;
+	opacity: 0;
+	transition: 0.5s;
+
+}
+.cercle i{
+
+	color: #99E2D0;
+	transition: .5s;
+
+
+}
+.un{
+
+	opacity: 0;
+	animation: apparition_progressive 1s forwards;
+
+}
+
+.deux{
+
+	opacity: 0;
+	animation: apparition_progressive 1s forwards;
+	animation-delay: 0.3s;
+
+}
+
+.trois{
+
+	opacity: 0;
+	animation: apparition_progressive 1s forwards;
+	animation-delay: 0.6s;
+}
+
+.quatre{
+
+	opacity: 0;
+	animation: apparition_progressive 1s forwards;
+	animation-delay: 0.8s;
+
+}
 
 .sous_menu p{
 
@@ -47,6 +171,7 @@ span{
 .menu{
 
 	margin-bottom: 30px;
+
 
 }
 
@@ -64,7 +189,6 @@ span{
 
 	display: flex;
 	justify-content: space-between;
-	margin-bottom: 20px;
 
 }
 
@@ -82,6 +206,7 @@ h1{
 	word-wrap: break-word;
 	white-space: nowrap;
 	text-overflow: ellipsis;
+	background-color: blue;
 
 }
 
@@ -119,8 +244,6 @@ section{
 	align-items: center;
 	padding: 20px 0px 70px 25px;
 	position: relative;
-	margin: 0;
-	/*top: -90px;*/
 	background-color: #F6F6F6;
 	border-top-left-radius: 30px;
 	border-top-right-radius: 30px;
@@ -143,7 +266,7 @@ input{
 	width: 50%;
 	height: 40px;
 	margin-top: 25px;
-	margin-left: 20%;
+	margin-left: 23%;
 	border-style: none;
 	background : linear-gradient(#FF79DA,#9356DC);
 	box-shadow: 2px 2px 8px #B3B3B3;
@@ -200,5 +323,654 @@ footer h4{
 
 	font-family: 'Shrikhand' ;
 	font-weight: 500;
+
+}
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media screen and (min-width: 561px) and (max-width: 800px){
+
+
+.sous_menu{
+
+	position: relative;
+	width: 90%;
+	height: 40px;
+	margin-bottom: 10px;
+	background-color: white;
+	border-radius: 15px;
+	display: flex;
+	align-items: center;
+	padding: 0px 10px 0px 10px;
+
+}
+
+
+.texte{
+
+	position: relative;
+	width: 100%;
+	
+
+}
+
+.sous_menu:hover{
+
+	cursor: pointer;
+}
+
+.sous_menu:hover .validation{
+
+	width: 60px;
+
+}
+
+.sous_menu:hover .cercle{
+
+	background-color: white;
+	opacity: 1;
+
+}
+
+.sous_menu:hover .cercle i{
+
+	transform: rotate(360deg);
+
+}
+
+.validation{
+
+	position: relative;
+	left: 10px;
+	width: 0px;
+	height: 100%;
+	background-color: #99E2D0;
+	border-top-right-radius: 15px;
+	border-bottom-right-radius: 15px;
+	transition: .5s;
+
+}
+
+.cercle{
+
+	position: relative;
+	width: 22px;
+	height: 22px;
+	background-color: white;
+	border-radius: 40px;
+	margin: auto;
+	margin-top: 10px;
+	line-height: 22px;
+	text-align: center;
+	opacity: 0;
+	transition: 0.5s;
+
+}
+
+.cercle i{
+
+	color: #99E2D0;
+	transition: .5s;
+
+
+}
+.un{
+
+	opacity: 0;
+	animation: apparition_progressive 1s forwards;
+
+}
+
+.deux{
+
+	opacity: 0;
+	animation: apparition_progressive 1s forwards;
+	animation-delay: 0.3s;
+
+}
+
+.trois{
+
+	opacity: 0;
+	animation: apparition_progressive 1s forwards;
+	animation-delay: 0.6s;
+}
+
+.quatre{
+
+	opacity: 0;
+	animation: apparition_progressive 1s forwards;
+	animation-delay: 0.8s;
+
+}
+
+.sous_menu p{
+
+	margin: 0;
+
+}
+
+.menu{
+
+	margin-bottom: 30px;
+	width: 50%;
+
+}
+
+.ensemble{
+
+	display: flex;
+	flex-wrap: wrap;
+
+}
+
+.barre{
+
+	position: relative;
+	height: 3px;
+	width: 40px;
+	background-color: #3EEBC3;
+	margin-bottom: 20px;
+
+}
+
+.complement_menu{
+
+	display: flex;
+	justify-content: space-between;
+
+}
+
+h1{
+
+	text-align: center;
+	margin: 0;
+
+}
+
+.masque{
+
+	width: 75%;
+	overflow: hidden;
+	word-wrap: break-word;
+	white-space: nowrap;
+	text-overflow: ellipsis;
+
+}
+
+h2{
+
+	font-size: 1.2em;
+	margin: 0;
+
+}
+
+header img{
+
+	position: relative;
+	top: 40px;
+	z-index: -1;
+	width: 100%;
+	height: 270px;
+	margin-top: 15px;
+	object-fit: cover;
+
+}
+
+header a{
+
+	position: relative;
+	top: 37px;
+	left: 20px;
+	color: black;
+	opacity: 0.8;
+	font-size: 1.3em;
+}
+
+section{
+
+	align-items: center;
+	padding: 20px 15px 70px 25px;
+	position: relative;
+	margin: 0;
+	background-color: #F6F6F6;
+	border-top-left-radius: 30px;
+	border-top-right-radius: 30px;
+
+}
+
+.icone_coeur{
+
+	font-size: 1.4em;
+	opacity: 0.8;
+	position: relative;
+	margin-left: 185px;
+	top: -25px;
+
+}
+
+input{
+
+	position: relative;
+	width: 30%;
+	height: 40px;
+	margin: 25px 0px 0px 33%;
+	border-style: none;
+	background : linear-gradient(#FF79DA,#9356DC);
+	box-shadow: 2px 2px 8px #B3B3B3;
+	border-radius: 25px;
+	color: white;
+
+}
+
+.ic_p{
+
+	display: flex;
+	align-items: center;
+	/*border: 2px solid green;*/
+	/*margin-bottom: 5px;*/
+
+}
+
+.ic_p p{
+
+	margin-left: 10px;
+	font-weight: 600;
+
+}
+
+.ic_p i{
+
+	position: relative;
+	top: -4px;
+	font-size: 0.8em;
+	width: 15px;
+	text-align: center;
+
+}
+
+.text_footer{
+
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-around;
+
+}
+
+footer{
+
+	background-color: #2F3C39;
+	color: white;
+	padding-top: 5px;
+	padding-bottom: 30px;
+
+}
+
+footer p{
+
+	padding: 0px;
+	margin: 0px 15px 10px 0px;
+	font-size: 1em;
+
+}
+
+footer h4{
+
+	font-family: 'Shrikhand' ;
+	font-weight: 500;
+	text-align: center;
+	font-size: 1.4em;
+
+}
+
+
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media screen and (min-width: 801px) and (max-width: 2000px){
+
+
+.sous_menu{
+
+	position: relative;
+	width: 100%;
+	height: 50px;
+	margin-bottom: 10px;
+	background-color: white;
+	border-radius: 15px;
+	display: flex;
+	align-items: center;
+	padding: 0px 10px 0px 10px;
+
+}
+
+.texte{
+
+	position: relative;
+	width: 100%;
+
+}
+
+.sous_menu:hover{
+
+	cursor: pointer;
+
+}
+
+.sous_menu:hover .validation{
+
+	width: 70px;
+
+}
+
+.sous_menu:hover .cercle{
+
+	background-color: white;
+	opacity: 1;
+
+}
+
+.sous_menu:hover .cercle i{
+
+	transform: rotate(360deg);
+
+}
+
+.validation{
+
+	position: relative;
+	width: 0px;
+	height: 100%;
+	left: 10px;
+	background-color: #99E2D0;
+	border-top-right-radius: 15px;
+	border-bottom-right-radius: 15px;
+	transition: .5s;
+
+}
+
+.cercle{
+
+	position: relative;
+	width: 25px;
+	height: 25px;
+	background-color: white;
+	border-radius: 40px;
+	margin: auto;
+	margin-top: 13px;
+	line-height: 25px;
+	text-align: center;
+	opacity: 0;
+	transition: 0.5s;
+
+}
+
+.cercle i{
+
+	color: #99E2D0;
+	transition: .5s;
+
+
+}
+
+.complement_menu{
+
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+
+}
+
+.un{
+
+	opacity: 0;
+	animation: apparition_progressive 1s forwards;
+
+}
+
+.deux{
+
+	opacity: 0;
+	animation: apparition_progressive 1s forwards;
+	animation-delay: 0.3s;
+
+}
+
+.trois{
+
+	opacity: 0;
+	animation: apparition_progressive 1s forwards;
+	animation-delay: 0.6s;
+}
+
+.quatre{
+
+	opacity: 0;
+	animation: apparition_progressive 1s forwards;
+	animation-delay: 0.8s;
+
+}
+
+.sous_menu p{
+
+	margin: 0;
+
+}
+
+.menu{
+
+	width: 30%;
+
+}
+
+.ensemble{
+
+	display: flex;
+	justify-content: space-around;
+	flex-wrap: wrap;
+
+}
+
+.barre{
+
+	position: relative;
+	height: 3px;
+	width: 40px;
+	background-color: #3EEBC3;
+	margin-bottom: 20px;
+
+}
+
+
+h1{
+
+	text-align: center;
+	margin: 0;
+
+}
+
+.masque{
+
+	width: 75%;
+	overflow: hidden;
+	word-wrap: break-word;
+	white-space: nowrap;
+	text-overflow: ellipsis;
+
+}
+
+h2{
+
+	font-size: 1.2em;
+	margin: 0;
+
+}
+
+header img{
+
+	position: relative;
+	top: 40px;
+	z-index: -1;
+	width: 100%;
+	height: 270px;
+	margin-top: 15px;
+	object-fit: cover;
+
+}
+
+header a{
+
+	position: relative;
+	top: 37px;
+	left: 20px;
+	color: black;
+	opacity: 0.8;
+	font-size: 1.3em;
+}
+
+section{
+
+	align-items: center;
+	padding: 20px 20px 70px 15px;
+	position: relative;
+	margin: 0;
+	background-color: #F6F6F6;
+	border-top-left-radius: 30px;
+	border-top-right-radius: 30px;
+
+}
+
+.icone_coeur{
+
+	font-size: 1.4em;
+	opacity: 0.8;
+	position: relative;
+	margin-left: 185px;
+	top: -25px;
+
+}
+
+.bouton{
+
+	text-align: center;
+	padding: 10px;
+
+}
+
+input{
+
+	position: relative;
+	width: 200px;
+	height: 40px;
+	/*margin: 30px 0px 0px 45%;*/
+	text-align: center;
+	border-style: none;
+	background : linear-gradient(#FF79DA,#9356DC);
+	box-shadow: 2px 2px 8px #B3B3B3;
+	border-radius: 25px;
+	color: white;
+	transition: .5s;
+
+}
+
+input:hover{
+
+	opacity: 0.8;
+	box-shadow: 8px 8px 8px #B3B3B3;
+	cursor: pointer;
+	transition: .5s;
+
+}
+
+.ic_p{
+
+	display: flex;
+	align-items: center;
+
+}
+
+.ic_p p{
+
+	margin-left: 10px;
+	font-weight: 600;
+
+}
+
+.ic_p i{
+
+	position: relative;
+	top: -4px;
+	font-size: 0.8em;
+	width: 15px;
+	text-align: center;
+
+}
+
+.text_footer{
+
+	display: flex;
+	justify-content: space-around;
+
+}
+
+footer{
+
+	text-align: center;
+	background-color: #2F3C39;
+	color: white;
+	padding-top: 5px;
+	padding-bottom: 30px;
+
+}
+
+
+
+footer p{
+
+	padding: 0px;
+	margin: 0px 15px 10px 0px;
+	font-size: 1.3em;
+
+}
+
+footer h4{
+
+	font-family: 'Shrikhand' ;
+	font-weight: 500;
+	text-align: center;
+	font-size: 1.6em;
+
+}
+
+
 
 }
