--- a/PagesMenu/style_menu.css
+++ b/PagesMenu/style_menu.css
@@ -2,36 +2,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;900&display=swap');
 
-h1,h2{
-
-	font-family: 'Shrikhand',sans-serif;
-
-}
-
-p{
-
-	font-family: 'Roboto:wght@300',sans-serif;
-	font-size: 0.8em;
-
-}
-
-span{
-
-	font-family: 'Roboto';
-	font-size: 1.1em; 
-	font-weight: 600;
-
-}
-
-footer a{
-
-	cursor: pointer;
-	text-decoration: none;
-	color: white;
-
-}
-
-
 @keyframes apparition_progressive{
 
 	from{
@@ -48,17 +18,110 @@ footer a{
 
 	}
 
+}
+
+
+@keyframes bouton_hover{
+
+	from{
+
+		opacity: 1;
+		box-shadow: 2px 2px 8px #B3B3B3;
+
+	}
+
+	to{
+
+		opacity: 0.8;
+		box-shadow: 8px 8px 8px #B3B3B3;
+
+	}
 
 }
 
-@media screen and (max-width: 560px){
+@keyframes bouton_normal{
+
+	from{
+
+		opacity: 0.8;
+		box-shadow: 8px 8px 8px #B3B3B3;
+
+	}
+
+	to{
+
+		opacity: 1;
+		box-shadow: 2px 2px 8px #B3B3B3;
+
+	}
+
+}
+
+
+h1,h2,footer h4{
+
+	font-family: 'Shrikhand',sans-serif;
+
+}
+
+footer h4{
+
+	font-weight: normal;
+	font-size: 1.2em;
+	margin-top: 20px;
+
+}
+
+h1{
+
+	text-align: center;
+	margin: 0;
+
+}
+
+h2{
+
+	margin: 0;
+
+}
+
+span{
+
+	font-family: 'Roboto'; 
+	font-weight: 600;
+
+}
+
+.menu h3,.menu p{
+
+	margin: 0;
+	padding: 0;
+	font-family: 'Roboto';
+	font-weight: normal;
+	
+
+}
+
+.menu h4{
+
+	margin: 0 0 5px 0;
+	padding: 0;
+	font-family: 'Roboto';
+
+}
+
+.menu{
+
+	margin-bottom: 30px;
+
+}
 
 .sous_menu{
 
 	position: relative;
 	padding: 0px 10px 0px 10px;
 	width: 90%;
-	height: 50px;
+	height: 65px;
 	margin-bottom: 10px;
 	background-color: white;
 	border-radius: 15px;
@@ -71,7 +134,14 @@ footer a{
 
 	position: relative;
 	width: 100%;
-	
+	transition: .5s;
+
+}
+
+.texte p{
+
+	font-size: 0.9em;
+
 }
 
 .sous_menu:hover{
@@ -85,6 +155,13 @@ footer a{
 
 }
 
+.sous_menu:hover .texte{
+
+	position: relative;
+	width: 80%;
+
+}
+
 .sous_menu:hover .cercle{
 
 	background-color: white;
@@ -108,8 +185,9 @@ footer a{
 	border-top-right-radius: 15px;
 	border-bottom-right-radius: 15px;
 	transition: .5s;
-
+	
 }
+
 .cercle{
 
 	position: relative;
@@ -118,20 +196,21 @@ footer a{
 	background-color: white;
 	border-radius: 40px;
 	margin: auto;
-	margin-top: 14px;
-	line-height: 22px;
+	margin-top: 21px;
+	line-height: 23px;
 	text-align: center;
 	opacity: 0;
 	transition: 0.5s;
 
 }
+
 .cercle i{
 
 	color: #99E2D0;
 	transition: .5s;
 
-
 }
+
 .un{
 
 	opacity: 0;
@@ -168,13 +247,6 @@ footer a{
 
 }
 
-.menu{
-
-	margin-bottom: 30px;
-
-
-}
-
 .barre{
 
 	position: relative;
@@ -189,13 +261,7 @@ footer a{
 
 	display: flex;
 	justify-content: space-between;
-
-}
-
-h1{
-
-	text-align: center;
-	margin: 0;
+	align-items: center;
 
 }
 
@@ -206,14 +272,6 @@ h1{
 	word-wrap: break-word;
 	white-space: nowrap;
 	text-overflow: ellipsis;
-	background-color: blue;
-
-}
-
-h2{
-
-	font-size: 1.2em;
-	margin: 0;
 
 }
 
@@ -242,7 +300,7 @@ header a{
 section{
 
 	align-items: center;
-	padding: 20px 0px 70px 25px;
+	padding: 20px 0px 40px 12px;
 	position: relative;
 	background-color: #F6F6F6;
 	border-top-left-radius: 30px;
@@ -250,23 +308,57 @@ section{
 
 }
 
-.icone_coeur{
-
-	font-size: 1.4em;
-	opacity: 0.8;
+.coeur{
 	position: relative;
-	margin-left: 80%;
-	top: -25px;
+	display: flex;
+	justify-content: flex-end;
+	top: -30px;
+	
+	
+
+}
+
+.coeur1{
+
+	position: relative;
+	font-size: 1.5em;
+	color: transparent;
+	left: 24px;
+	top: 1px;
+	z-index: 1;
+	transition: 0.5s;
+
+}
+
+.coeur2{
+
+	font-size: 1.55em;
+	opacity: 0.5;
+
+}
+
+.coeur1:hover{
+
+	color: #D172F7;
+	cursor: pointer;
+
+}
+
+.bouton{
+
+	position: relative;
+	text-align: center;
+	margin-top: 40px;
 
 }
 
 input{
 
+	animation: bouton_normal .5s forwards;
 	position: relative;
-	width: 50%;
+	width: 200px;
 	height: 40px;
-	margin-top: 25px;
-	margin-left: 23%;
+	text-align: center;
 	border-style: none;
 	background : linear-gradient(#FF79DA,#9356DC);
 	box-shadow: 2px 2px 8px #B3B3B3;
@@ -275,19 +367,24 @@ input{
 
 }
 
+input:hover{
+
+	animation: bouton_hover normal .5s forwards;
+	cursor: pointer;
+
+}
+
 .ic_p{
 
 	display: flex;
 	align-items: center;
-	/*border: 2px solid green;*/
-	/*margin-bottom: 5px;*/
 
 }
 
-.ic_p p{
+.ic_p a{
 
 	margin-left: 10px;
-	font-weight: 600;
+	font-weight: 300;
 
 }
 
@@ -298,678 +395,120 @@ input{
 	font-size: 0.8em;
 	width: 15px;
 	text-align: center;
+
 
 }
 
 footer{
 
 	background-color: #2F3C39;
+	text-align: center;
 	color: white;
-	padding-top: 5px;
-	padding-left: 25px;
-	padding-bottom: 30px;
+	padding: 5px 15px 30px 15px;
 
 }
 
-footer p{
-
-	padding: 0px;
-	margin: 0px 0px 10px 0px;
-	font-size: 0.8em;
-
-}
-
-footer h4{
-
-	font-family: 'Shrikhand' ;
-	font-weight: 500;
-
-}
-
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-@media screen and (min-width: 561px) and (max-width: 800px){
-
-
-.sous_menu{
-
-	position: relative;
-	width: 90%;
-	height: 40px;
-	margin-bottom: 10px;
-	background-color: white;
-	border-radius: 15px;
-	display: flex;
-	align-items: center;
-	padding: 0px 10px 0px 10px;
-
-}
-
-
-.texte{
-
-	position: relative;
-	width: 100%;
-	
-
-}
-
-.sous_menu:hover{
+footer a{
 
 	cursor: pointer;
-}
-
-.sous_menu:hover .validation{
-
-	width: 60px;
-
-}
-
-.sous_menu:hover .cercle{
-
-	background-color: white;
-	opacity: 1;
-
-}
-
-.sous_menu:hover .cercle i{
-
-	transform: rotate(360deg);
-
-}
-
-.validation{
-
-	position: relative;
-	left: 10px;
-	width: 0px;
-	height: 100%;
-	background-color: #99E2D0;
-	border-top-right-radius: 15px;
-	border-bottom-right-radius: 15px;
-	transition: .5s;
-
-}
-
-.cercle{
-
-	position: relative;
-	width: 22px;
-	height: 22px;
-	background-color: white;
-	border-radius: 40px;
-	margin: auto;
-	margin-top: 10px;
-	line-height: 22px;
-	text-align: center;
-	opacity: 0;
-	transition: 0.5s;
-
-}
-
-.cercle i{
-
-	color: #99E2D0;
-	transition: .5s;
-
-
-}
-.un{
-
-	opacity: 0;
-	animation: apparition_progressive 1s forwards;
-
-}
-
-.deux{
-
-	opacity: 0;
-	animation: apparition_progressive 1s forwards;
-	animation-delay: 0.3s;
-
-}
-
-.trois{
-
-	opacity: 0;
-	animation: apparition_progressive 1s forwards;
-	animation-delay: 0.6s;
-}
-
-.quatre{
-
-	opacity: 0;
-	animation: apparition_progressive 1s forwards;
-	animation-delay: 0.8s;
-
-}
-
-.sous_menu p{
-
-	margin: 0;
-
-}
-
-.menu{
-
-	margin-bottom: 30px;
-	width: 50%;
-
-}
-
-.ensemble{
-
-	display: flex;
-	flex-wrap: wrap;
-
-}
-
-.barre{
-
-	position: relative;
-	height: 3px;
-	width: 40px;
-	background-color: #3EEBC3;
-	margin-bottom: 20px;
-
-}
-
-.complement_menu{
-
-	display: flex;
-	justify-content: space-between;
-
-}
-
-h1{
-
-	text-align: center;
-	margin: 0;
-
-}
-
-.masque{
-
-	width: 75%;
-	overflow: hidden;
-	word-wrap: break-word;
-	white-space: nowrap;
-	text-overflow: ellipsis;
-
-}
-
-h2{
-
-	font-size: 1.2em;
-	margin: 0;
-
-}
-
-header img{
-
-	position: relative;
-	top: 40px;
-	z-index: -1;
-	width: 100%;
-	height: 270px;
-	margin-top: 15px;
-	object-fit: cover;
-
-}
-
-header a{
-
-	position: relative;
-	top: 37px;
-	left: 20px;
-	color: black;
-	opacity: 0.8;
-	font-size: 1.3em;
-}
-
-section{
-
-	align-items: center;
-	padding: 20px 15px 70px 25px;
-	position: relative;
-	margin: 0;
-	background-color: #F6F6F6;
-	border-top-left-radius: 30px;
-	border-top-right-radius: 30px;
-
-}
-
-.icone_coeur{
-
-	font-size: 1.4em;
-	opacity: 0.8;
-	position: relative;
-	margin-left: 185px;
-	top: -25px;
-
-}
-
-input{
-
-	position: relative;
-	width: 30%;
-	height: 40px;
-	margin: 25px 0px 0px 33%;
-	border-style: none;
-	background : linear-gradient(#FF79DA,#9356DC);
-	box-shadow: 2px 2px 8px #B3B3B3;
-	border-radius: 25px;
+	text-decoration: none;
 	color: white;
+	font-family: 'Roboto';
+	padding: 0px;
+	margin: 0px 0px 10px 0px;
 
 }
 
-.ic_p{
+footer a:hover{
 
-	display: flex;
-	align-items: center;
-	/*border: 2px solid green;*/
-	/*margin-bottom: 5px;*/
-
-}
-
-.ic_p p{
-
-	margin-left: 10px;
-	font-weight: 600;
-
-}
-
-.ic_p i{
-
-	position: relative;
-	top: -4px;
-	font-size: 0.8em;
-	width: 15px;
-	text-align: center;
+	text-decoration: underline;
 
 }
 
 .text_footer{
 
+	margin-top: 20px;
 	display: flex;
-	flex-wrap: wrap;
 	justify-content: space-around;
+	flex-wrap: wrap;
 
 }
+
+@media screen and (max-width: 560px){
 
 footer{
 
-	background-color: #2F3C39;
-	color: white;
-	padding-top: 5px;
-	padding-bottom: 30px;
+	text-align: left;
+}
+
+.text_footer{
+
+	flex-direction: column;
+}
 
 }
 
-footer p{
-
-	padding: 0px;
-	margin: 0px 15px 10px 0px;
-	font-size: 1em;
-
-}
-
-footer h4{
-
-	font-family: 'Shrikhand' ;
-	font-weight: 500;
-	text-align: center;
-	font-size: 1.4em;
-
-}
-
-
-
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-@media screen and (min-width: 801px) and (max-width: 2000px){
-
-
-.sous_menu{
-
-	position: relative;
-	width: 100%;
-	height: 50px;
-	margin-bottom: 10px;
-	background-color: white;
-	border-radius: 15px;
-	display: flex;
-	align-items: center;
-	padding: 0px 10px 0px 10px;
-
-}
-
-.texte{
-
-	position: relative;
-	width: 100%;
-
-}
-
-.sous_menu:hover{
-
-	cursor: pointer;
-
-}
-
-.sous_menu:hover .validation{
-
-	width: 70px;
-
-}
-
-.sous_menu:hover .cercle{
-
-	background-color: white;
-	opacity: 1;
-
-}
-
-.sous_menu:hover .cercle i{
-
-	transform: rotate(360deg);
-
-}
-
-.validation{
-
-	position: relative;
-	width: 0px;
-	height: 100%;
-	left: 10px;
-	background-color: #99E2D0;
-	border-top-right-radius: 15px;
-	border-bottom-right-radius: 15px;
-	transition: .5s;
-
-}
-
-.cercle{
-
-	position: relative;
-	width: 25px;
-	height: 25px;
-	background-color: white;
-	border-radius: 40px;
-	margin: auto;
-	margin-top: 13px;
-	line-height: 25px;
-	text-align: center;
-	opacity: 0;
-	transition: 0.5s;
-
-}
-
-.cercle i{
-
-	color: #99E2D0;
-	transition: .5s;
-
-
-}
-
-.complement_menu{
-
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-
-}
-
-.un{
-
-	opacity: 0;
-	animation: apparition_progressive 1s forwards;
-
-}
-
-.deux{
-
-	opacity: 0;
-	animation: apparition_progressive 1s forwards;
-	animation-delay: 0.3s;
-
-}
-
-.trois{
-
-	opacity: 0;
-	animation: apparition_progressive 1s forwards;
-	animation-delay: 0.6s;
-}
-
-.quatre{
-
-	opacity: 0;
-	animation: apparition_progressive 1s forwards;
-	animation-delay: 0.8s;
-
-}
-
-.sous_menu p{
-
-	margin: 0;
-
-}
+@media screen and (min-width: 561px) and (max-width: 800px){
 
 .menu{
 
-	width: 30%;
+	width: 50%;
 
 }
 
 .ensemble{
 
 	display: flex;
-	justify-content: space-around;
 	flex-wrap: wrap;
 
 }
 
-.barre{
-
-	position: relative;
-	height: 3px;
-	width: 40px;
-	background-color: #3EEBC3;
-	margin-bottom: 20px;
-
-}
-
-
-h1{
-
-	text-align: center;
-	margin: 0;
-
-}
-
-.masque{
-
-	width: 75%;
-	overflow: hidden;
-	word-wrap: break-word;
-	white-space: nowrap;
-	text-overflow: ellipsis;
-
-}
-
-h2{
-
-	font-size: 1.2em;
-	margin: 0;
-
-}
-
-header img{
-
-	position: relative;
-	top: 40px;
-	z-index: -1;
-	width: 100%;
-	height: 270px;
-	margin-top: 15px;
-	object-fit: cover;
-
-}
-
-header a{
-
-	position: relative;
-	top: 37px;
-	left: 20px;
-	color: black;
-	opacity: 0.8;
-	font-size: 1.3em;
-}
-
 section{
 
-	align-items: center;
-	padding: 20px 20px 70px 15px;
-	position: relative;
 	margin: 0;
-	background-color: #F6F6F6;
-	border-top-left-radius: 30px;
-	border-top-right-radius: 30px;
-
-}
-
-.icone_coeur{
-
-	font-size: 1.4em;
-	opacity: 0.8;
-	position: relative;
-	margin-left: 185px;
-	top: -25px;
 
 }
 
 .bouton{
 
 	text-align: center;
-	padding: 10px;
+	margin: 0;
 
 }
 
-input{
+}
 
-	position: relative;
-	width: 200px;
-	height: 40px;
-	/*margin: 30px 0px 0px 45%;*/
-	text-align: center;
-	border-style: none;
-	background : linear-gradient(#FF79DA,#9356DC);
-	box-shadow: 2px 2px 8px #B3B3B3;
-	border-radius: 25px;
-	color: white;
-	transition: .5s;
+@media screen and (min-width: 801px){
+
+
+.menu{
+
+	width: 30%;
 
 }
 
-input:hover{
-
-	opacity: 0.8;
-	box-shadow: 8px 8px 8px #B3B3B3;
-	cursor: pointer;
-	transition: .5s;
-
-}
-
-.ic_p{
-
-	display: flex;
-	align-items: center;
-
-}
-
-.ic_p p{
-
-	margin-left: 10px;
-	font-weight: 600;
-
-}
-
-.ic_p i{
-
-	position: relative;
-	top: -4px;
-	font-size: 0.8em;
-	width: 15px;
-	text-align: center;
-
-}
-
-.text_footer{
+.ensemble{
 
 	display: flex;
 	justify-content: space-around;
+	flex-wrap: wrap;
 
 }
 
-footer{
+section{
+
+	padding: 20px 15px 20px 15px;
+	margin: 0;
+
+}
+
+.bouton{
 
 	text-align: center;
-	background-color: #2F3C39;
-	color: white;
-	padding-top: 5px;
-	padding-bottom: 30px;
+	margin: 0;
 
 }
 
-
-
-footer p{
-
-	padding: 0px;
-	margin: 0px 15px 10px 0px;
-	font-size: 1.3em;
-
-}
-
-footer h4{
-
-	font-family: 'Shrikhand' ;
-	font-weight: 500;
-	text-align: center;
-	font-size: 1.6em;
-
-}
 
 
 
