--- a/style.css
+++ b/style.css
@@ -2,6 +2,222 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;900&display=swap');
 
+@keyframes lettre{
+
+	0%{
+
+		position: relative;
+		color: red;
+		text-shadow: 0 0 15px #fff900;
+	}
+
+	90%{
+
+		color: white;
+		text-shadow: none;
+
+
+	}
+
+	100%{
+
+		color: red;
+		text-shadow: 0 0 7px #fff900;
+
+	}
+
+
+}
+
+.lettre:nth-child(1){
+
+	animation-delay: 0.1s;
+
+}
+
+.lettre:nth-child(2){
+
+	animation-delay: 0.2s;
+
+}
+
+.lettre:nth-child(3){
+
+	animation-delay: 0.3s;
+
+}
+
+.lettre:nth-child(4){
+
+	animation-delay: 0.4s;
+
+}
+
+.lettre:nth-child(5){
+
+	animation-delay: 0.5s;
+
+}
+
+.lettre:nth-child(6){
+
+	animation-delay: 0.6s;
+
+}
+
+.lettre:nth-child(7){
+
+	animation-delay: 0.7s;
+
+}
+
+@keyframes animation_body{
+
+	from{
+
+		background-color: #0E4D72;
+	}
+
+	to{
+
+		background-color: white;
+
+	}
+
+}
+
+@keyframes animation_chargement{
+
+	from{
+
+		opacity: 1;
+	}
+
+	70%{
+
+		opacity: 0;
+
+	}
+
+	to{
+		
+		height: 0;
+		margin-top: 0;
+		opacity: 0;
+		display: none;
+
+	}
+
+}
+
+@keyframes animation_corp{
+
+	from{
+ 	
+ 		opacity: 0;
+ 
+	}
+
+	to{
+
+		opacity: 1;
+
+	}
+
+}
+
+.titre_anim{
+
+	font-size: 1.5em;
+	color: #9ED6F7;
+
+}
+
+.essai{
+
+	opacity: 0;
+	animation: animation_corp 2s forwards;
+	animation-delay: 2s;
+
+}
+
+.chargement{
+
+	width: 50%;
+	height: 500px;
+	z-index: 1;
+	margin-left: 25%;
+	margin-top: 5%;
+	animation: animation_chargement 2s forwards;
+	animation-delay: 2s;
+
+}
+
+.lettre{
+
+	position: relative;
+	top: 40px;
+	left: 20px;
+	z-index: 2;
+	font-family: 'Roboto';
+	font-size: 155%;
+	margin-right: 2px;
+	color: white;
+	animation: lettre 1.5s linear infinite;
+
+}
+
+.groupe_lettre{
+
+	position: relative;
+
+}
+
+.chargement img{
+
+	position: relative;
+	border-radius: 20px;
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+
+}
+
+body{
+
+	background-color: #0E4D72;
+	animation: animation_body 2s forwards;
+	animation-delay: 3s;
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 @keyframes bouton_normal{
 
@@ -39,8 +255,7 @@
 
 }
 
-
-h1, footer h4{
+h1, footer h4, .titre_anim{
 
 	font-family: 'Shrikhand',sans-serif;
 
@@ -312,7 +527,6 @@ section{
 	font-size: 1.5em;
 	color: transparent;
 	left: 24px;
-	top: 1px;
 	z-index: 1;
 	transition: 0.5s;
 
