--- a/style.css
+++ b/style.css
@@ -285,6 +285,7 @@ header img{
 
 .localisation{
 
+	position: relative;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -296,7 +297,9 @@ header img{
 .zone_texte{
 
 	border-style: none;
-	background-color: #EEE;
+	background-color: #FFF;
+	border-radius: 5px;
+	border: 1px solid black;
 	margin: 10px;
 	padding: 10px;
 
