Correction erreur sur le titre de la présentation

--- a/style.css
+++ b/style.css
@@ -768,21 +768,21 @@ footer a{
 
 @media screen and (min-width: 1005px){
 
-.présentation h3{
+.presentation h3{
 
 	position: relative;
 	text-align: center;
 
 }
 
-.présentation {
+.presentation {
 
 	position: relative;
 	width: 100%;
 
 }
 
-.Fonctionnement{
+.fonctionnement{
 
 	position: relative;
 	width: 100%;
